second banner, recipie added

--- a/index.html
+++ b/index.html
@@ -23,9 +23,51 @@
             </p>
             <a class="button" href="https://en.wikipedia.org/wiki/Food" target="blank">Order Food</a>
         </div>
-        <div class="width-img">
+        <div >
             <img src="images/female/cover img.png" alt="">
         </div>
     </section>
+    <section class="about-info">
+        <div class="width-img-about-me">
+            <img src="images/female/Person-Image-50.png" alt="">
+        </div>
+        <div class="width-text-about-me">
+            <h3>About Me</h3>
+            <p>
+                Let us provide the food you deserve. If you are interested in good testing healthy food. <span class="added-color"><b>Food Hub</b></span> is the place fo you. You don't need a diet because we provide 
+                healthy and delicious food for you!
+            </p>
+            <a class="button" href="https://en.wikipedia.org/wiki/Food" target="blank">Contact Me</a>
+        </div>
+    </section>
+    <section>
+        <div class="recipie">
+            <h3>My recipies</h3>
+            <p>I'm a cook, traind under the great Gordon Ramsy<br>Here are some of my special recipies.</p>
+        </div>
+        <div class="boxes">
+            <div class="box-01">
+                <img src="images/food/Project Cover.png" alt="">
+                <h4>Deep-Fried Peanuts</h4>
+                <p>Irresistibly crunchy, deep-fried peanuts are the salty side dish that you didn't know you needed.</p>
+                <a class="button" href=https://www.allrecipes.com/recipe/239295/deep-fried-peanuts/ target="blank">Read More</a>
+            </div>
+            <div class="box-01">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h4>Best-Ever Texas Caviar</h4>
+                <p>No fish are required for this beloved Texan dish. Black and pinto beans, along with corn, make up the base.</p>
+                <a class="button" href="https://www.allrecipes.com/recipe/152270/best-ever-texas-caviar/" target="blank">Read More</a>
+            </div>
+            <div class="box-01">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h4>Southern Pimento Cheese</h4>
+                <p>Tangy, creamy, and with a hint of spice, you can't beat pimento cheese when it comes to classic Southern side dishes.</p>
+                <a class="button" href="https://www.allrecipes.com/recipe/189930/southern-pimento-cheese/" target="blank">Read More</a>
+            </div>
+        </div>
+    </section>
+        
+
+
 </body>
 </html>
