--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="header">
-        <h2>Food Hub</h2>
-    </section>
+    <div class="header">
+        <a href="https://web.programming-hero.com/" class="logo" target="blank"><span class="added-color">Food</span>Hub</a>
+        <div class="right-hader">
+          <a href="https://www.facebook.com/tazibsorowar/" target="blank">Home</a>
+          <a href="tazibsorowar@gmail.com" target="blank">Contact</a>
+          <a href="https://www.facebook.com/tazibsorowar/about" target="blank">About</a>
+        </div>
+      </div>
     <section class="top-banner">
         <div class="width-text">
             <h1>
@@ -66,7 +71,26 @@
             </div>
         </div>
     </section>
-        
+    <section class="social-info-bg">
+        <div class="social-info">
+            <div class="social-info-box">
+                <h3>700k</h3>
+                <small>Youtube Subscribers</small>
+            </div>
+            <div class="social-info-box">
+                <h3>2.4m</h3>
+                <small>Instagram Followers</small>
+            </div>
+            <div class="social-info-box">
+                <h3>100k</h3>
+                <small>Dribbble Shot Likes</small>
+            </div>
+        </div>
+    </section>
+        <footer>
+            <h3><span class="added-color">Food</span> Hub</h3>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </footer>
 
 
 </body>
