--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div class="width-text-about-me">
             <h3>About Me</h3>
             <p>
-                Let us provide the food you deserve. If you are interested in good testing healthy food. <span class="added-color"><b>Food Hub</b></span> is the place fo you. You don't need a diet because we provide 
-                healthy and delicious food for you!
+                Hi! I'm Aida. I'm from East-Texus. I am a chef traind under Gordon Ramsay. I have a cooking experience of more than 10 years! Cooking has always been my favorite hobby. I cook with pasion. As a health conscious person, I always try to keep my food healthy. 
             </p>
             <a class="button" href="https://en.wikipedia.org/wiki/Food" target="blank">Contact Me</a>
         </div>
@@ -48,7 +47,7 @@
     <section>
         <div class="recipie">
             <h3>My recipies</h3>
-            <p>I'm a cook, traind under the great Gordon Ramsy<br>Here are some of my special recipies.</p>
+            <p>I'm a chef, traind under the great Gordon Ramsay<br>Here are some of my special recipies.</p>
         </div>
         <div class="boxes">
             <div class="box-01">
