--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
         </div>
         <div class="boxes">
             <div class="box-01">
-                <img src="images/food/Project Cover.png" alt="">
+                <img src="images/food/recipie01.png" alt="">
                 <h4>Deep-Fried Peanuts</h4>
                 <p>Irresistibly crunchy, deep-fried peanuts are the salty side dish that you didn't know you needed.</p>
                 <a class="button" href=https://www.allrecipes.com/recipe/239295/deep-fried-peanuts/ target="blank">Read More</a>
             </div>
             <div class="box-01">
-                <img src="images/food/Project Cover1.jpg" alt="">
+                <img src="images/food/recipie2.png" alt="">
                 <h4>Best-Ever Texas Caviar</h4>
                 <p>No fish are required for this beloved Texan dish. Black and pinto beans, along with corn, make up the base.</p>
                 <a class="button" href="https://www.allrecipes.com/recipe/152270/best-ever-texas-caviar/" target="blank">Read More</a>
             </div>
             <div class="box-01">
-                <img src="images/food/Project Cover.jpg" alt="">
+                <img src="images/food/recipie3.png" alt="">
                 <h4>Southern Pimento Cheese</h4>
                 <p>Tangy, creamy, and with a hint of spice, you can't beat pimento cheese when it comes to classic Southern side dishes.</p>
                 <a class="button" href="https://www.allrecipes.com/recipe/189930/southern-pimento-cheese/" target="blank">Read More</a>
@@ -90,7 +90,5 @@
             <h3><span class="added-color">Food</span> Hub</h3>
             <p>Eat healthy to live healthy. Live healthy to live happy.</p>
         </footer>
-
-
 </body>
 </html>
